# DTVariant

./: .gitignore  CMakeLists.txt  dtvariant.cpp  dtvariant.h  dtvariant.hpp  dtvariant_linux.cpp  dtvariant_linux.h  main.cpp
